Java 21 and stack trace cleanup